--- a/login.html
+++ b/login.html
@@ -96,6 +96,7 @@
                   id="password"
                   name="password"
                   required
+                     <p>esqueceu sua senha? <a href="recuperar-senha.html">mudar senha</a></p>
                 />
             </div>
             <button type="submit">Entrar</button>
