--- a/login.html
+++ b/login.html
@@ -88,6 +88,7 @@
                   name="email"
                   required
                 />
+                <p>esqueceu sua senha? <a href="senha.html">mudar senha</a></p>
             </div>
             <div class="input-group">
                 <label for="password">Senha</label>
