--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <li> <a href=""> Sobre </a> </li>
       <li> <a href="receitas/bolo.html"> Receitas </a></li>
       <li> <a href=""> Contato </a></li>
-      <li> <a href=""> Minha Conta </a></li>
+      <li> <a href="./conta.html"> Minha Conta </a></li>
     </ol>
 
   </nav>
@@ -351,8 +351,8 @@
           <p>Quantidade total de produtos: <span id="somaTotal">0</span></p>
           <p>Valor total: R$ <span id="valorTotal">0,00</span></p>
           <button> Finalizar compra</button>
+          <h1>produtos selecionados:</h1>
         </div>
-
       </div>
     </section>
 
