--- a/conta.html
+++ b/conta.html
@@ -89,7 +89,7 @@
             <div>
                 <img src="./public/images/logos/conta.png" alt="Foto do Perfil" class="profile-pic">
                 <div>
-                    <p><strong>Nome:</strong> João da Silva 
+                    <p><strong>Nome:</strong> João 
                     <p><strong>Sobrenome:</strong> da Silva 
                     <p><strong>Data de nascimento:</strong> 10/11/2002
                     <p><strong>CPF:</strong> 90239423643
