atualização botão para a sessão de pagamento

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
           <h2>Carrinho de Compras</h2>
           <p>Quantidade total de produtos: <span id="somaTotal">0</span></p>
           <p>Valor total: R$ <span id="valorTotal">0,00</span></p>
-          <button> Finalizar compra</button>
+        <button onclick="window.location.href='https://localhost/vendas/index.php'" >realizar compra</button>
         </div>
       </div>
     </section>
